@@ -25,10 +25,10 @@
 //     http://www.fltk.org/str.php
 //
 
-// generated by Fast Light User Interface Designer (fluid) version 1.0107
+// generated by Fast Light User Interface Designer (fluid) version 1.0108
 
 #include "about_panel.h"
-void show_help(const char *name);
+void show_help(const char *name); 
 
 Fl_Double_Window *about_panel=(Fl_Double_Window *)0;
 
@@ -271,36 +271,34 @@ static void cb_Close(Fl_Return_Button* o, void*) {
 }
 
 Fl_Double_Window* make_about_panel() {
-  Fl_Double_Window* w;
-  { Fl_Double_Window* o = about_panel = new Fl_Double_Window(315, 175, "About FLUID");
-    w = o;
-    o->color(FL_LIGHT1);
-    o->selection_color(FL_DARK1);
-    w->hotspot(o);
+  { about_panel = new Fl_Double_Window(315, 175, "About FLUID");
+    about_panel->color(FL_LIGHT1);
+    about_panel->selection_color(FL_DARK1);
+    about_panel->hotspot(about_panel);
     { Fl_Box* o = new Fl_Box(10, 10, 115, 120);
       o->image(image_fluid);
-    }
+    } // Fl_Box* o
     { Fl_Box* o = new Fl_Box(135, 10, 170, 69, "FLTK User\nInterface Designer\nVersion 1.1.7");
       o->color((Fl_Color)12);
       o->selection_color(FL_DARK1);
       o->labelfont(1);
       o->labelsize(18);
       o->align(FL_ALIGN_TOP_LEFT|FL_ALIGN_INSIDE);
-    }
+    } // Fl_Box* o
     { Fl_Box* o = new Fl_Box(135, 89, 170, 42, "Copyright 1998-2006 by\nBill Spitzak and others");
       o->align(132|FL_ALIGN_INSIDE);
-    }
+    } // Fl_Box* o
     { Fl_Button* o = new Fl_Button(89, 141, 123, 25, "View License...");
       o->labelcolor(FL_DARK_BLUE);
       o->callback((Fl_Callback*)cb_View);
-    }
+    } // Fl_Button* o
     { Fl_Return_Button* o = new Fl_Return_Button(222, 141, 83, 25, "Close");
       o->callback((Fl_Callback*)cb_Close);
-    }
-    o->set_non_modal();
-    o->end();
-  }
-  return w;
+    } // Fl_Return_Button* o
+    about_panel->set_non_modal();
+    about_panel->end();
+  } // Fl_Double_Window* about_panel
+  return about_panel;
 }
 
 //
