@@ -25,12 +25,12 @@
 //     http://www.fltk.org/str.php
 //
 
-// generated by Fast Light User Interface Designer (fluid) version 1.0107
+// generated by Fast Light User Interface Designer (fluid) version 1.0108
 
 #ifndef about_panel_h
 #define about_panel_h
 #include <FL/Fl.H>
-extern void show_help(const char *name);
+extern void show_help(const char *name); 
 #include <FL/Fl_Double_Window.H>
 extern Fl_Double_Window *about_panel;
 #include <FL/Fl_Box.H>
